<resources>
    <string name="app_name">EAPT</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <!--play store-->
    <string name="appid">ca-app-pub-9400864410179150~6165476966</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="signup"><b><u>Sign Up</u></b></string>
    <string name="message_empty_email">Please provide a non empty email!</string>
    <string name="message_invalid_email">Please provide a valid email!</string>
    <string name="message_empty_password">Please provide a non empty password!</string>
    <string name="message_empty_name">Please provide a non empty username!</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="eapt">English for Academic Proficiency Test</string>
    <string name="dont_have_account_register">Not Registered? Sign Up Now</string>
    <string name="have_account_login">Already Registered? Sign In</string>
    <string name="text_edit">Edit</string>
    <string name="text_input_data">Form Registration</string>
    <string name="text_upload">Upload</string>
    <string name="text_change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="no_reg">Registration Number</string>
    <string name="nim">NIM</string>
    <string name="fullname">Fullname</string>
    <string name="dob">Date of Birth</string>
    <string name="save">Save</string>
    <string name="success_register">Successfuly Register</string>
    <string name="error_empty_nim">Please provide a non empty NIM</string>
    <string name="error_empty_fullname">Please provide a non empty Fullname</string>
    <string name="error_empty_dob">Please provide a non empty Date of Birth</string>
    <string name="error_empty_noreg">Please provide a non empty Registration Number!</string>
    <string name="success_input">Successfully Fillin Registration Form!</string>
    <string name="already_registered">You have already registered!</string>
    <string name="error_empty_no_ref">Please provide a non empty No Ref!</string>
    <string name="no_ref">No Ref</string>
    <string name="text_send_proof">Send Proof of Payment</string>
    <string name="error_empty_image">Please choose image!</string>
    <string name="success_send_payment">Successfully send payment info!</string>
    <string name="already_send">Already send payment info!</string>
    <string name="nik">NIK</string>
    <string name="phone">Phone</string>
    <string name="error_empty_nik">Please provide a non empty NIK!</string>
    <string name="wrong_auth">Wrong Authentication!</string>
</resources>
